<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/custom_test_jlpt_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_gravity="center_horizontal">
        <RadioButton
            android:id="@+id/custom_test_jlpt_n5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/jlpt_n5_tab_text"
            style="@style/BlackTheme.KanjiTestRadioButton"/>
        <RadioButton
            android:id="@+id/custom_test_jlpt_n4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jlpt_n4_tab_text"
            style="@style/BlackTheme.KanjiTestRadioButton"/>
        <RadioButton
            android:id="@+id/custom_test_jlpt_n3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jlpt_n3_tab_text"
            style="@style/BlackTheme.KanjiTestRadioButton"/>
        <RadioButton
            android:id="@+id/custom_test_jlpt_n2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jlpt_n2_tab_text"
            style="@style/BlackTheme.KanjiTestRadioButton"/>
        <RadioButton
            android:id="@+id/custom_test_jlpt_n1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jlpt_n1_tab_text"
            style="@style/BlackTheme.KanjiTestRadioButton"/>
    </RadioGroup>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/amount_of_test_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_amount"/>
        <SeekBar
            android:id="@+id/amount_of_test_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:layout_marginTop="10dp">
        </SeekBar>
    </LinearLayout>
    <LinearLayout
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/custom_test_ok_button"
            android:text="@string/seek_bar_ok_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/custom_test_no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seek_bar_no_button_text"/>
    </LinearLayout>
</LinearLayout>