<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="muscular.man.tools.kanjinvk.fragment.KanjiDetailFragment"
    android:clickable="true">
    <RelativeLayout
        android:id="@+id/kanji_word_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/kanji_word_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_200"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/colorPrimary">
        </TextView>
        <TextView
            android:id="@+id/kanji_compound_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compound_title_text"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_15"
            android:textStyle="bold"
            android:layout_below="@+id/kanji_word_text_view"
            android:maxLines="1">
        </TextView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/compound_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTransparent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/kanji_compound_title_text_view">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/kanji_detail_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
        <RelativeLayout
            android:id="@+id/kanji_on_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/kanji_on_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_title_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:maxLines="1">
            </TextView>

            <TextView
                android:id="@+id/kanji_on_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlackTheme.CommonKanjiDetailInfo"
                android:maxLines="2"
                android:layout_toRightOf="@+id/kanji_on_title_text_view">
            </TextView>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/kanji_kun_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/kanji_kun_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kun_title_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:maxLines="1">
            </TextView>
            <TextView
                android:id="@+id/kanji_kun_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlackTheme.CommonKanjiDetailInfo"
                android:maxLines="2"
                android:layout_toRightOf="@id/kanji_kun_title_text_view">
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/kanji_mean_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/kanji_mean_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mean_title_text"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_15"
                android:textStyle="bold"
                android:maxLines="1">
            </TextView>
            <TextView
                android:id="@+id/kanji_mean_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlackTheme.CommonKanjiDetailInfo"
                android:maxLines="2"
                android:layout_toRightOf="@+id/kanji_mean_title_text_view">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>